--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <div class="container">
+      <div class="top-bar">
+        <div class="menu-text">
+          <h1 id="logo">Logo</h1>
+          <h1 id="menu">Menu</h1>
+        </div>
+      </div>
       <div class="count">
         <div id="counter"></div>
         <button id="minus">-</button>
